#richard: curd 款式 尺码 品牌
