# src/route/route.go
@@ -21,6 +21,18 @@ var router = func (api API) []https.Router{
 		{"PUT", "/v1/brands/:pathId", api.UpdateBrand},
 		{"DELETE", "/v1/brands/:pathId", api.DeleteBrand},
 		{"GET", "/v1/brands/:pathId", api.QueryBrand},
+		//尺码路由
+		{"POST", "/v1/sizes", api.CreateSize},
+		{"GET", "/v1/sizes", api.QuerySizes},
+		{"GET", "/v1/sizes/:pathId", api.QuerySize},
+		{"PUT", "/v1/sizes/:pathId", api.UpdateSize},
+		{"DELETE", "/v1/sizes/:pathId", api.DeleteSize},
+		//款式路由
+		{"POST", "/v1/styles", api.CreateStyle},
+		{"GET", "/v1/styles", api.QueryStyles},
+		{"GET", "/v1/styles/:pathId", api.QueryStyle},
+		{"PUT", "/v1/styles/:pathId", api.UpdateStyle},
+		{"DELETE", "/v1/styles/:pathId", api.DeleteStyle},
 		//路由服务
 		{"GET", "/v1/services/version", api.Version},
 	}
@@ -43,6 +55,18 @@ type API interface {
 	UpdateBrand(ctx *https.Context)
 	DeleteBrand(ctx *https.Context)
 	QueryBrand (ctx *https.Context)
+	//sizes
+	CreateSize(ctx *https.Context)
+	QuerySizes(ctx *https.Context)
+	QuerySize (ctx *https.Context)
+	UpdateSize(ctx *https.Context)
+	DeleteSize(ctx *https.Context)
+	//styles
+	CreateStyle(ctx *https.Context)
+	QueryStyles(ctx *https.Context)
+	QueryStyle (ctx *https.Context)
+	UpdateStyle(ctx *https.Context)
+	DeleteStyle(ctx *https.Context)
 }
 
 func LoadRouter(host string, port int, mode string) error {
